Use URIs, rather than URLs, in HtmlUtil.
Avoid URL's behaviour of resolving domain names slowing down
tests.